@@ -1,3 +1,10 @@
+2009-09-05  John W. Eaton  <jwe@octave.org>
+
+	* plot/hold.m: Correctly toggle hold state.  Set both figure and
+	axes "nextplot" property when turning hold state on.
+	* plot/ishold.m: Check figure and axes nextplot properties.
+	Accept axes or figure handle argument.
+
 2009-09-01  Christophe Tournery  <christophe.tournery@illusonic.com>
 
 	* audio/wavread.m: Rename data_size from obsolete ck_size.
